Added swagger for create, update, delete user
